tests/ui/lang-items/start_lang_item_args.argv_inner_ptr.stderr
error: parameter 3 of the `start` lang item is incorrect
  --> $DIR/start_lang_item_args.rs:82:52
   |
LL | fn start<T>(_main: fn() -> T, _argc: isize, _argv: *const *const usize, _sigpipe: u8) -> isize {
   |                                                    ^^^^^^^^^^^^^^^^^^^
   |
help: change the type from `*const *const usize` to `*const *const u8`
   |
LL | fn start<T>(_main: fn() -> T, _argc: isize, _argv: *const *const u8, _sigpipe: u8) -> isize {
   |                                                    ~~~~~~~~~~~~~~~~

error: aborting due to previous error

